--- a/package.json
+++ b/package.json
@@ -1,27 +1,35 @@
 {
-  "name": "spechialchar-web",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.0"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0"
-  }
+	"name": "spechialchar-web",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"next": "14.1.0",
+		"react": "^18",
+		"react-dom": "^18"
+	},
+	"devDependencies": {
+		"@svgr/webpack": "^8.1.0",
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"autoprefixer": "^10.0.1",
+		"class-variance-authority": "^0.7.0",
+		"cssnano": "^6.0.5",
+		"eslint": "^8",
+		"eslint-config-next": "14.1.0",
+		"postcss": "^8.4.35",
+		"postcss-easings": "^4.0.0",
+		"postcss-import-url": "^7.2.0",
+		"postcss-nesting": "^12.0.3",
+		"postcss-preset-env": "^9.4.0",
+		"tailwind-merge": "^2.2.1",
+		"tailwindcss": "^3.3.0",
+		"typescript": "^5"
+	}
 }
