--- a/package.json
+++ b/package.json
@@ -9,12 +9,9 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"formik": "^2.4.5",
 		"next": "14.1.0",
 		"react": "^18",
-		"react-dom": "^18",
-		"react-icons": "^5.0.1",
-		"yup": "^1.3.3"
+		"react-dom": "^18"
 	},
 	"devDependencies": {
 		"@svgr/webpack": "^8.1.0",
