--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"react": "^18",
 		"react-dom": "^18",
 		"react-icons": "^5.0.1",
+		"swiper": "^11.0.7",
 		"yup": "^1.3.3"
 	},
 	"devDependencies": {
