--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
 		"react": "^18",
 		"react-dom": "^18",
 		"react-icons": "^5.0.1",
+		"react-slick": "^0.30.2",
+		"swiper": "^11.0.7",
 		"yup": "^1.3.3"
 	},
 	"devDependencies": {
@@ -23,6 +25,7 @@
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
+		"@types/react-slick": "^0.23.13",
 		"autoprefixer": "^10.0.1",
 		"class-variance-authority": "^0.7.0",
 		"cssnano": "^6.0.5",
@@ -34,7 +37,7 @@
 		"postcss-nesting": "^12.0.3",
 		"postcss-preset-env": "^9.4.0",
 		"tailwind-merge": "^2.2.1",
-		"tailwindcss": "^3.3.0",
+		"tailwindcss": "^3.4.1",
 		"typescript": "^5"
 	}
 }
