--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "next": "14.1.3",
@@ -19,13 +20,19 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "cssnano": "^6.1.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "postcss": "^8",
+    "postcss-easings": "^4.0.0",
+    "postcss-import-url": "^7.2.0",
+    "postcss-nesting": "^12.1.0",
+    "postcss-preset-env": "^9.5.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
