--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-fast-marquee": "^1.6.4",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
