--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "embla-carousel-react": "^8.0.0",
+    "formik": "^2.4.5",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
