--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.4",
     "react-icons": "^5.0.1",
+    "schema-dts": "^1.1.2",
     "swiper": "^11.0.7",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
