--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@builder.io/dev-tools": "^1.0.19",
+    "@builder.io/react": "^5.0.0",
+    "@builder.io/sdk": "^3.0.0",
     "@calcom/atoms": "^1.0.57",
     "@calcom/embed-react": "^1.5.0",
     "@hookform/resolvers": "^3.3.4",
