--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "react-fast-marquee": "^1.6.4",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.0.1",
+    "react-markdown": "^9.0.1",
+    "rehype-raw": "^7.0.0",
     "schema-dts": "^1.1.2",
     "swiper": "^11.1.11",
     "tailwind-merge": "^2.2.1",
