--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "embla-carousel-react": "^8.0.0",
     "formik": "^2.4.5",
     "next": "14.1.3",
+    "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.4",
