--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clsx": "^2.1.0",
     "embla-carousel-react": "^8.0.0",
     "formik": "^2.4.5",
+    "framer-motion": "^11.5.4",
     "next": "14.1.3",
     "nodemailer": "^6.9.15",
     "react": "^18",
